<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_text"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <ImageView
            android:id="@+id/dog_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dog" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_yes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_yes"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_no"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/text_no"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
